--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_account">CreateAccount</string>
+    <string name="btn_sign_in">Sign in</string>
+    <string name="btn_join_us">Join us</string>
 </resources>
