--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">English Club</string>
+    <string name="app_name">English District</string>
     <string name="title_activity_news">NewsActivity</string>
 
     <string name="hello_world">Hello world!</string>
