--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_account">CreateAccount</string>
     <string name="btn_sign_in">Sign in</string>
-    <string name="btn_join_us">Join us</string>
+    <string name="btn_join_now">Join now</string>
     <string name="bu_clicking">By clicking Join now, you agree to English district\'s </string>
     <string name="user_agreement">User Agreement,</string>
     <string name="privasy"> Privacy Policy</string>
